*8336* Fixed stage participants cutoff issue

--- a/styles/structure/body.less
+++ b/styles/structure/body.less
@@ -109,14 +109,14 @@ body {
 	padding-bottom: 150px;
 	min-height: 100%;
 }
+
 .pkp_structure_page,
 .pkp_structure_page:before,
 .pkp_structure_page:after {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing:    border-box;
-  box-sizing:         border-box;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
 }
-
 
 .pkp_structure_body:after, .pkp_structure_main:after {
 	clear: both;
@@ -139,7 +139,7 @@ body {
 		padding-top: 10px;
 		padding-bottom: 80px;
 		border-top: 1px dotted #999;
-		overflow: hidden;
+		float: right;
 	}
 }
 
